<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bugmakers.jarvistime.presentation.pages.authentication.register.RegisterFragmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:paddingTop="@dimen/auth_vertical_margin_medium">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeLogin"
            style="@style/AppTheme.Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:text="@string/register_welcome_sign_up"
            android:textSize="@dimen/auth_title"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/introductionLabelSecond"
            style="@style/AppTheme.Text.Medium.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_vertical_margin_small"
            android:layout_marginTop="@dimen/default_margin_small"
            android:layout_marginEnd="@dimen/auth_vertical_margin_small"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/register_after_registration"
            android:textColor="@color/edit_text_hint" />

        <com.bugmakers.jarvistime.presentation.view.InputEditTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginTop="@dimen/auth_vertical_margin_medium"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:hasError="@{viewModel.usernameHasError}"
            app:iet_hint="@string/login_enter_your_email"
            app:iet_toggleEnabled="false"
            app:iet_toggleIcon="@drawable/ic_email"
            app:iet_toggleVisible="true"
            app:iet_validationVisible="true"
            app:text="@={viewModel.username}" />

        <com.bugmakers.jarvistime.presentation.view.InputEditTextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginTop="@dimen/default_margin_large"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:hasError="@{viewModel.passwordHasError}"
            app:iet_hint="@string/register_password_characters"
            app:iet_toggleEnabled="true"
            app:iet_toggleIcon="@drawable/ic_password_toggle"
            app:iet_toggleVisible="true"
            app:iet_validationVisible="true"
            app:text="@={viewModel.password}" />

        <com.bugmakers.jarvistime.presentation.view.InputEditTextView
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginTop="@dimen/default_margin_large"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:hasError="@{viewModel.confirmPasswordHasError}"
            app:iet_hint="@string/register_confirm_password"
            app:iet_toggleEnabled="true"
            app:iet_toggleIcon="@drawable/ic_password_toggle"
            app:iet_toggleVisible="true"
            app:iet_validationVisible="true"
            app:text="@{viewModel.confirmPassword}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login"
            style="@style/AppTheme.Button.Main"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginTop="@dimen/auth_vertical_margin_medium"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:onClick="@{() -> viewModel.onRegisterClick()}"
            android:text="@string/register_sign_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/haveAnAccount"
            style="@style/AppTheme.Text.Medium.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/auth_horizontal_margin"
            android:layout_marginTop="@dimen/default_margin_large"
            android:layout_marginEnd="@dimen/auth_horizontal_margin"
            android:text="@string/register_already_have_an_account"
            android:textColor="@color/edit_text_hint"
            android:textSize="15sp" />

    </LinearLayout>

</layout>