<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bugmakers.jarvistime.presentation.pages.register.RegisterActivityViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.bugmakers.jarvistime.presentation.view.MainToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:leftActionIcon="@drawable/ic_back_black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppTheme.Text.Demi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginSmall"
                android:text="@string/register_new_account"
                android:textSize="@dimen/textAuthFlowTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppTheme.Text.Demi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                android:text="@string/register_sign_up_to_continue"
                android:textColor="@color/textGray"
                android:textSize="@dimen/textSizeMedium" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/AppTheme.Text.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginLarge"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        android:paddingStart="4dp"
                        android:text="@string/log_in_email"
                        android:textSize="@dimen/textSizeMedium"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameContainer"
                        style="@style/AppTheme.TextInputLayout"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            style="@style/AppTheme.EditText"
                            android:hint="@string/log_in_enter_your_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.username}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/AppTheme.Text.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginTop="@dimen/defaultMarginLarge"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        android:paddingStart="4dp"
                        android:text="@string/log_in_password"
                        android:textSize="@dimen/textSizeMedium"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordContainer"
                        style="@style/AppTheme.TextInputLayout"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/password"
                            style="@style/AppTheme.EditText"
                            android:hint="@string/log_in_enter_your_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingTop="2dp"
                            android:text="@={viewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/AppTheme.Text.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginTop="@dimen/defaultMarginSmall"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        android:paddingStart="4dp"
                        android:text="@string/register_confirm_password"
                        android:textSize="@dimen/textSizeMedium"
                        tools:ignore="RtlSymmetry" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPasswordContainer"
                        style="@style/AppTheme.TextInputLayout"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/conformPassword"
                            style="@style/AppTheme.EditText"
                            android:hint="@string/register_confirm_your_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingTop="2dp"
                            android:text="@={viewModel.confirmPassword}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/createNewAccount"
                        style="@style/AppTheme.Button.Red"
                        android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginLarge"
                        android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                        android:layout_marginBottom="0dp"
                        android:onClick="@{() -> viewModel.onRegisterClick()}"
                        android:text="@string/register_create_new_account" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/haveAnAccount"
                        style="@style/AppTheme.NoBackgroundButton.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="@string/register_already_have"
                        android:textSize="@dimen/textSizeSmall" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </FrameLayout>

</layout>