<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bugmakers.jarvistime.presentation.pages.login.LogInActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.bugmakers.jarvistime.presentation.view.MainToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:leftActionIcon="@drawable/ic_back_black" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Demi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
            android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginSmall"
            android:text="@string/log_in_welcome_back"
            android:textSize="@dimen/textAuthFlowTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppTheme.Text.Demi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
            android:text="@string/log_in_log_in_continue"
            android:textColor="@color/textGray"
            android:textSize="@dimen/textSizeMedium" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginLarge"
                    android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                    android:paddingStart="4dp"
                    android:text="@string/log_in_email"
                    android:textSize="@dimen/textSizeMedium"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameContainer"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/log_in_enter_your_email"
                        android:imeOptions="actionNext"
                        app:hasError="@{viewModel.usernameHasError}"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.username}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/AppTheme.Text.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginTop="@dimen/defaultMarginLarge"
                    android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                    android:paddingStart="4dp"
                    android:text="@string/log_in_password"
                    android:textSize="@dimen/textSizeMedium"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordContainer"
                    style="@style/AppTheme.TextInputLayout"
                    android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        style="@style/AppTheme.EditText"
                        android:hint="@string/log_in_enter_your_password"
                        android:imeOptions="actionDone"
                        app:hasError="@{viewModel.passwordHasError}"
                        android:inputType="textPassword"
                        android:paddingTop="2dp"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/logIn"
                    style="@style/AppTheme.Button.Main"
                    android:layout_marginStart="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginTop="@dimen/defaultFlowAuthVerticalMarginLarge"
                    android:layout_marginEnd="@dimen/defaultFlowAuthHorizontalMargin"
                    android:layout_marginBottom="0dp"
                    android:onClick="@{() -> viewModel.onLogInClick()}"
                    android:text="@string/log_in_" />

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/progress"
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_marginStart="@dimen/defaultFlowAuthVerticalMarginMedium"
                    android:layout_marginTop="@dimen/defaultMarginLarge"
                    android:layout_marginEnd="@dimen/defaultFlowAuthVerticalMarginMedium"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:mpb_indeterminateTint="@color/red"
                    app:mpb_progressBackgroundTint="@color/red"
                    app:mpb_progressStyle="horizontal"
                    app:mpb_progressTint="@color/red"
                    app:showProgress="@{viewModel.isProgressVisible}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/noAccount"
                    style="@style/AppTheme.NoBackgroundButton.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/log_in_no_account"
                    android:textSize="@dimen/textSizeSmall" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>